--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta name="theme-color" content="#000000" />
    
     
-    <title>Proffy</title>
+    <title>Evolucional</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
